refactor:使用hutool包简化对象属性拷贝